# GraphAPI

./: CMakeLists.txt
graph_algo/: connected_components.hpp  domain.hpp  graph.hpp  graph_painter.hpp  main.cpp
graph_algo/json/: json.hpp
graph_algo/svg/: svg.cpp  svg.hpp
info/: GraphAPI.drawio  GraphAPIdrawio.drawio  ~$GraphAPI.svg.bkp  ~$GraphAPI.svg.dtmp
